# dashgo

./: README.md
dashgo_nav/config/imu/: costmap_common_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
dashgo_nav/launch/: astra.launch  gmapping_imu.launch  gmapping_imu_new.launch  navigation_2.launch  navigation_camera_imu.launch  navigation_imu_2.launch  navigation_imu_new.launch  navigation_multi_imu_2.launch  navigation_multi_loop_imu_2.launch
dashgo_nav/launch/include/imu/: amcl.launch.xml
dashgo_tools/: CMakeLists.txt
dashgo_tools/conf/: box_filter.yaml  box_filter_2.yaml
smart_node/: CMakeLists.txt  package.xml
smart_node/config/: smart_config.yaml  smart_parms_imu.yaml  yocs_velocity_smoother.yaml
smart_node/include/smart_node/: smart_node.h
smart_node/launch/: driver_imu.launch  driver_imu_new.launch
smart_node/sdk/: CMakeLists.txt
smart_node/sdk/include/: ChannelDevice.h  Console.h  common.h  crc16.h  data_fifo.h  detect_task.h  serial.h  smart_driver.h  timer.h  v8stdint.h
smart_node/sdk/src/: Console.cpp  crc16.cpp  data_fifo.cpp  detect_task.cpp  serial.cpp  smart_driver.cpp
smart_node/sdk/src/Sockets/: SimpleSocket.cpp  SimpleSocket.h
smart_node/sdk/src/impl/unix/: unix.h  unix_serial.cpp  unix_serial.h  unix_timer.cpp
smart_node/sdk/src/impl/windows/: win_serial.cpp  win_serial.h  win_timer.cpp
smart_node/src/nodes/: fei-2019-04-11-smart_node.cpp  smart_node.cpp
ydlidar/: CMakeLists.txt  package.xml
ydlidar/launch/: ydlidar1_up.launch  ydlidar2_down.launch
